Added implementation for printing out the banner.